troubleshooting layout issues

--- a/src/pages/CheatSheets/Css/Flexbox/FlexboxCheatSheet.styles.css
+++ b/src/pages/CheatSheets/Css/Flexbox/FlexboxCheatSheet.styles.css
@@ -55,6 +55,7 @@
     align-content: center;
     align-items: center;
     justify-content: center;
+    height: 100%;
   }
 }
 
